# tinyosc

./: CMakeLists.txt  tinyosc.c
